<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/signupPage"
    tools:context=".SignupActivity">

        <TextView
            android:id="@+id/appNameSignupPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/signupUsr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/username_hint"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <EditText
            android:id="@+id/signupPswd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <EditText
            android:id="@+id/signupPswd2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <Button
            android:id="@+id/signUpButton2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:text="@string/signupbutton"
            android:textSize="18sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/signup_login_text" />

        <Button
            android:id="@+id/signupLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/login_button"
            android:textSize="16sp" />
</LinearLayout>
