<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addWeightPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddWeightActivity" >

    <TextView
        android:id="@+id/scaleWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scale_weight"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_weight"
        android:background="@drawable/custom_edittext"
        android:inputType="numberDecimal"
        android:layout_marginTop="120dp"
        android:padding="8sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>

    <Button
        android:id="@+id/saveWeightButton"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/black"
        android:text="@string/save"
        android:textSize="18sp" />

</LinearLayout>